<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kelvinmudzimuirema.globtrotter.AboutActivity">

    <TextView
        android:id="@+id/about"
        android:layout_width="375dp"
        android:layout_height="35dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/about_will"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpUsage"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="385dp"
        android:layout_height="72dp"
        android:text="@string/about_para"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="61dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="375dp"
        android:layout_height="35dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="80dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/our_core_belief"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:ignore="SpUsage"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:text="@string/about_belief"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="41dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.223" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="375dp"
        android:layout_height="35dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/mission"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59"
        tools:ignore="SpUsage"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="414dp"
        android:layout_height="49dp"
        android:text="@string/mission_para"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textStyle="bold"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="66dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="0dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="375dp"
        android:layout_height="35dp"
        android:layout_marginBottom="49dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="49dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/vison"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintVertical_bias="0.516" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:text="@string/vision_para"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/textView5"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0" />


</android.support.constraint.ConstraintLayout>
